--- a/index.html
+++ b/index.html
@@ -1,20 +1,77 @@
 <!doctype html>
 
 <html lang="pl">
+
 <head>
   <meta charset="utf-8">
-
-  <title>Basic Template</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-  <script src=" "></script>
- 
+  <title>Sit on chair template</title>
+  <link rel="stylesheet" href="style/reset.css">
+  <link rel="stylesheet" href="fonts/stylesheet.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-  
+  <div class="container">
+    <header>
+      <p class="logo">Sit <span class="green-letters">on</span> chair</p>
+      <ul class="nav">
+        <li>Kontakt</li>
+        <li>Galeria</li>
+        <li>O firmie</li>
+      </ul>
+
+    </header>
+  </div>
+  <div class="container">
+    <section id="welcome">
+      <img src="images/black_chair.png" alt="">
+      <h1>Sit <span class="green-letters">on</span> our <span class="green-letters">chair</span>
+      </h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+      </p>
+      <div class="button-more">
+        <!-- <span class="see-more">Zobacz wiecej</span> -->
+      </div>
+  </div>
+  </section>
+  </div>
+  <div class="container">
+    <section id="gallery">
+      <div class="gallery">
+        <div class="gallery-content">
+          <img src="images/box1_img.jpg" alt="">
+          <h2 class="galleryh2">Chair CLAIR</h2>
+        </div>
+        <div class="gallery-content">
+          <img src="images/box2_img.jpg" alt="">
+          <h2 class="galleryh2">Chair MARGRAITA</h2>
+        </div>
+        <div class="gallery-contentarticle">
+          <h2 class="galleryh2">Finds all inputs</h2>
+          <article class="gallery-article">
+            Find all inputs that are not checked and hightlights the next sibling span. Notice there is no change when clicking the checkboxes since no click events have been linked.<br> Notice there is no change when clicking the checkboxes since no
+            click events have been
+          </article>
+        </div>
+      </div>
+
+    </section>
+  </div>
+  <div class="container">
+    <section id="price-list">
+
+    </section>
+  </div>
+  <div class="container">
+    <section id="form">
+
+    </section>
+  </div>
+  <footer>
+    <div class="container">
+
+    </div>
+  </footer>
 </body>
+
 </html>
