--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
         <div class="gallery-content">
           <img src="images/box2_img.jpg" alt="">
           <h2 class="galleryh2">Chair MARGRAITA</h2>
+
         </div>
         <div class="gallery-contentarticle">
-          <h2 class="galleryh2">Finds all inputs</h2>
+          <h2 class="galleryh2a">Finds all inputs</h2>
           <article class="gallery-article">
-            Find all inputs that are not checked and hightlights the next sibling span. Notice there is no change when clicking the checkboxes since no click events have been linked.<br> Notice there is no change when clicking the checkboxes since no
-            click events have been
+            Find all inputs that are not checked and hightlights the next sibling span. Notice there is no change when clicking the checkboxes since no click events have been linked.<br><br> Notice there is no change when clicking the checkboxes since
+            no click events have been
           </article>
         </div>
       </div>
@@ -59,7 +60,35 @@
   </div>
   <div class="container">
     <section id="price-list">
-
+      <h2 class="price">Cennik</h2>
+      <div class="inner-price-container">
+        </div>
+        <div class="price-box">
+          <p class="plan">Basic Plan</p>
+          <div class="big-circle">
+            <p>Zakup towaru + dowoz</p>
+            <p>Serwis</p>
+            <div class="button-price">
+            </div>
+          </div>
+        </div>
+        <div class="price-box greenbox">
+          <p class="plan">Standard Plan</p>
+          <div class="big-circle"></div>
+            <p>Zakup towaru + dowoz</p>
+            <p>Serwis</p>
+            <p>Gwarancja 5 lat</p>
+            <div class="button-price"></div>
+        </div>
+        <div class="price-box"></div>
+          <p class="plan">Advance plan</p>
+          <div class="big-circle"></div>
+            <p>Zakup towaru + dowoz</p>
+            <p>Serwis</p>
+            <p>Gwarancja 6 lat</p>
+            <p>Porady projektanta</p>
+            <div class="button-price"></div>
+      </div>
     </section>
   </div>
   <div class="container">
