--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     <section id="price-list">
       <h2 class="price">Cennik</h2>
       <div class="inner-price-container">
-        </div>
         <div class="price-box">
           <p class="plan">Basic Plan</p>
           <div class="big-circle">
@@ -75,21 +74,23 @@
         <div class="price-box greenbox">
           <p class="plan">Standard Plan</p>
           <div class="big-circle"></div>
-            <p>Zakup towaru + dowoz</p>
-            <p>Serwis</p>
-            <p>Gwarancja 5 lat</p>
-            <div class="button-price"></div>
+          <p>Zakup towaru + dowoz</p>
+          <p>Serwis</p>
+          <p>Gwarancja 5 lat</p>
+          <div class="button-price"></div>
         </div>
-        <div class="price-box"></div>
+        <div class="price-box">
           <p class="plan">Advance plan</p>
           <div class="big-circle"></div>
-            <p>Zakup towaru + dowoz</p>
-            <p>Serwis</p>
-            <p>Gwarancja 6 lat</p>
-            <p>Porady projektanta</p>
-            <div class="button-price"></div>
+          <p>Zakup towaru + dowoz</p>
+          <p>Serwis</p>
+          <p>Gwarancja 6 lat</p>
+          <p>Porady projektanta</p>
+          <div class="button-price"></div>
+        </div>
       </div>
-    </section>
+  </div>
+  </section>
   </div>
   <div class="container">
     <section id="form">
