--- a/index.html
+++ b/index.html
@@ -65,27 +65,34 @@
         <div class="price-box">
           <p class="plan">Basic Plan</p>
           <div class="big-circle">
-            <p>Zakup towaru + dowoz</p>
-            <p>Serwis</p>
-            <div class="button-price">
-            </div>
+            <p>85<sup>99</sup></p>
+            <p>PLN/MSC</p>
+          </div>
+          <p class="price-text dark-grey">Zakup towaru + dowóz</p>
+          <p class="price-text light-grey">Serwis</p>
+          <div class="button-price">
           </div>
         </div>
         <div class="price-box greenbox">
-          <p class="plan">Standard Plan</p>
-          <div class="big-circle"></div>
-          <p>Zakup towaru + dowoz</p>
-          <p>Serwis</p>
-          <p>Gwarancja 5 lat</p>
+          <p class="plan greenbox">Standard Plan</p>
+          <div class="big-circle-center">
+            <p>95<sup>99</sup></p>
+            <p>PLN/MSC</p>
+          </div>
+          <p class="price-text white">Zakup towaru + dowóz</p>
+          <p class="price-text light-grey">Serwis</p>
+          <p class="price-text white">Gwarancja 5 lat</p>
           <div class="button-price"></div>
         </div>
         <div class="price-box">
           <p class="plan">Advance plan</p>
-          <div class="big-circle"></div>
-          <p>Zakup towaru + dowoz</p>
-          <p>Serwis</p>
-          <p>Gwarancja 6 lat</p>
-          <p>Porady projektanta</p>
+          <div class="big-circle">
+            <p>211<sup>00</sup></p>
+            <p>PLN/MSC</p></div>
+          <p class="price-text dark-grey">Zakup towaru + dowóz</p>
+          <p class="price-text light-grey">Serwis</p>
+          <p class="price-text dark-grey">Gwarancja 6 lat</p>
+          <p class="price-text light-grey">Porady projektanta</p>
           <div class="button-price"></div>
         </div>
       </div>
