--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
           </div>
           <p class="price-text dark-grey">Zakup towaru + dowóz</p>
           <p class="price-text light-grey">Serwis</p>
-          <div class="button-price">
+          <div class="button-price-one">
           </div>
         </div>
         <div class="price-box greenbox">
-          <p class="plan greenbox">Standard Plan</p>
+          <p class="plan-greenbox">Standard Plan</p>
           <div class="big-circle-center">
             <p>95<sup>99</sup></p>
             <p>PLN/MSC</p>
@@ -82,7 +82,7 @@
           <p class="price-text white">Zakup towaru + dowóz</p>
           <p class="price-text light-grey">Serwis</p>
           <p class="price-text white">Gwarancja 5 lat</p>
-          <div class="button-price"></div>
+          <div class="button-price-two"></div>
         </div>
         <div class="price-box">
           <p class="plan">Advance plan</p>
@@ -93,7 +93,7 @@
           <p class="price-text light-grey">Serwis</p>
           <p class="price-text dark-grey">Gwarancja 6 lat</p>
           <p class="price-text light-grey">Porady projektanta</p>
-          <div class="button-price"></div>
+          <div class="button-price-three"></div>
         </div>
       </div>
   </div>
