--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
       </p>
       <div class="button-more">
-        <!-- <span class="see-more">Zobacz wiecej</span> -->
+        Zobacz więcej
       </div>
   </div>
   </section>
@@ -63,6 +63,10 @@
       <h2 class="price">Cennik</h2>
       <div class="inner-price-container">
         <div class="price-box">
+          <div class="small-circle">
+            <div class="inner-small-circle">
+            </div>
+          </div>
           <p class="plan">Basic Plan</p>
           <div class="big-circle">
             <p>85<sup>99</sup></p>
@@ -70,30 +74,39 @@
           </div>
           <p class="price-text dark-grey">Zakup towaru + dowóz</p>
           <p class="price-text light-grey">Serwis</p>
-          <div class="button-price-one">
-          </div>
+          <div class="button-price-one">Dołącz</div>
         </div>
         <div class="price-box greenbox">
+          <div class="small-circle greenbox">
+            <div class="inner-small-circle greenbox">
+            </div>
+          </div>
           <p class="plan-greenbox">Standard Plan</p>
           <div class="big-circle-center">
+            <!-- zapytac czemu nie odsowa sie wzgledem rodzica -->
             <p>95<sup>99</sup></p>
             <p>PLN/MSC</p>
           </div>
           <p class="price-text white">Zakup towaru + dowóz</p>
           <p class="price-text light-grey">Serwis</p>
           <p class="price-text white">Gwarancja 5 lat</p>
-          <div class="button-price-two"></div>
+          <div class="button-price-two">Dołącz</div>
         </div>
         <div class="price-box">
+          <div class="small-circle">
+            <div class="inner-small-circle">
+            </div>
+          </div>
           <p class="plan">Advance plan</p>
           <div class="big-circle">
             <p>211<sup>00</sup></p>
-            <p>PLN/MSC</p></div>
+            <p>PLN/MSC</p>
+          </div>
           <p class="price-text dark-grey">Zakup towaru + dowóz</p>
           <p class="price-text light-grey">Serwis</p>
           <p class="price-text dark-grey">Gwarancja 6 lat</p>
           <p class="price-text light-grey">Porady projektanta</p>
-          <div class="button-price-three"></div>
+          <div class="button-price-three">Dołącz</div>
         </div>
       </div>
   </div>
