footer styling start

--- a/index.html
+++ b/index.html
@@ -114,17 +114,21 @@
 
   <div class="container">
     <section id="form">
-        <h2 class="price">Kontakt</h2>
-        <form class="contact">
-        <input	class="twoInputs" type="text"	name="imie" placeholder=" Imię"><br>
-        <input	class="twoInputs" type="email"	name="email"	placeholder=" email"><br>
-        <textarea	cols="50"	rows="10" placeholder=" Wiadomosc"></textarea>
-        <div class='checkbox'>
-          <input type='checkbox' id='checkbox_1' >
-          <label for='checkbox_1'></label>
-        </div>
-				<input	type="submit"	value="Wyślij">
-        </form>
+      <h2 class="price">Kontakt</h2>
+      <img class="redchair" src="images/red_chair.png">
+      <form class="contact">
+        <input class="twoInputs" type="text" name="imie" placeholder=" Imię"><br>
+        <input class="twoInputs" type="email" name="email" placeholder=" email"><br>
+        <textarea cols="50" rows="10" placeholder=" Wiadomosc"></textarea>
+        <span class="custom-checkbox">
+            <input type="checkbox" name="" id="checkbox_1">
+            <label for="checkbox_1"></label>
+            <p class="agree clearfix">
+              Zgadzam się na przetwarzanie <br> danych osobowych
+            </p>
+          </span>
+        <input type="submit" value="Wyślij">
+      </form>
     </section>
   </div>
   <footer>
