--- a/index.html
+++ b/index.html
@@ -133,7 +133,14 @@
   </div>
   <footer>
     <div class="container">
-
+      <div class="footer-inner-container">
+        <p class="copyright">Copyright 2017 | All Rights Reserved. - Sit On Chair</p>
+        <img src="images/flickr.png">
+        <img src="images/vimeo.png">
+        <img src="images/pinterest.png">
+        <img src="images/twitter.png">
+        <p class="footerSit">sit <span>on</span> chair</p>
+      </div>
     </div>
   </footer>
 </body>
