--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     <header>
       <p class="logo">Sit <span class="green-letters">on</span> chair</p>
       <ul class="nav">
-        <li>Kontakt</li>
-        <li>Galeria</li>
-        <li>O firmie</li>
+        <li><a href="#">Kontakt</a></li>
+        <li><a href="#">Galeria</a></li>
+        <li><a href="#">O firmie</a>
+          <ul class="nav-content">
+            <li><a href="#">Aktualnosci</a></li>
+            <li><a href="#">Nasz team</a></li>
+            <li><a href="#">Historia</a></li>
+          </ul>
+        </li>
       </ul>
 
     </header>
