--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <section id="gallery">
       <div class="gallery">
         <div class="gallery-content">
-          <img src="images/box1_img.jpg" alt="">
+          <img src="images/box1_img.jpg" class="images-to-hover"alt="">
           <h2 class="galleryh2">Chair CLAIR</h2>
         </div>
         <div class="gallery-content">
-          <img src="images/box2_img.jpg" alt="">
+          <img src="images/box2_img.jpg" class="images-to-hover"alt="">
           <h2 class="galleryh2">Chair MARGRAITA</h2>
 
         </div>
@@ -124,8 +124,8 @@
       <img class="redchair" src="images/red_chair.png">
       <form class="contact">
         <input class="twoInputs" type="text" name="imie" placeholder=" Imię"><br>
-        <input class="twoInputs" type="email" name="email" placeholder=" email"><br>
-        <textarea cols="50" rows="10" placeholder=" Wiadomosc"></textarea>
+        <input class="twoInputs" type="email" name="email" placeholder=" Email"><br>
+        <textarea cols="50" rows="10" placeholder=" Wiadomość"></textarea>
         <span class="custom-checkbox">
             <input type="checkbox" name="" id="checkbox_1">
             <label for="checkbox_1"></label>
@@ -141,10 +141,10 @@
     <div class="container">
       <div class="footer-inner-container">
         <p class="copyright">Copyright 2017 | All Rights Reserved. - Sit On Chair</p>
-        <img src="images/flickr.png">
-        <img src="images/vimeo.png">
-        <img src="images/pinterest.png">
-        <img src="images/twitter.png">
+        <a href="#" class="footer-social"><img src="images/flickr.png"></a>
+        <a href="#" class="footer-social"><img src="images/vimeo.png"></a>
+        <a href="#" class="footer-social"><img src="images/pinterest.png"></a>
+        <a href="#" class="footer-social"><img src="images/twitter.png"></a>
         <p class="footerSit">sit <span>on</span> chair</p>
       </div>
     </div>
