--- a/index.html
+++ b/index.html
@@ -30,26 +30,33 @@
   </div>
   <div class="container">
     <section id="welcome">
-      <img src="images/black_chair.png" alt="">
-      <h1>Sit <span class="green-letters">on</span> our <span class="green-letters">chair</span>
-      </h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-      </p>
-      <div class="button-more">
-        Zobacz więcej
+      <div class="slider">
+        
+        <div class="slider-block">
+          <img src="images/black_chair.png" alt="">
+          <h1>Sit <span class="green-letters">on</span> our <span class="green-letters">chair</span>
+          </h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+          </p>
+          <div class="button-more">
+            Zobacz więcej
+          </div>
+        </div>
+
       </div>
   </div>
   </section>
   </div>
+
   <div class="container">
     <section id="gallery">
       <div class="gallery">
         <div class="gallery-content">
-          <img src="images/box1_img.jpg" class="images-to-hover"alt="">
+          <img src="images/box1_img.jpg" class="images-to-hover" alt="">
           <h2 class="galleryh2">Chair CLAIR</h2>
         </div>
         <div class="gallery-content">
-          <img src="images/box2_img.jpg" class="images-to-hover"alt="">
+          <img src="images/box2_img.jpg" class="images-to-hover" alt="">
           <h2 class="galleryh2">Chair MARGRAITA</h2>
 
         </div>
