slider bez animacji

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="fonts/stylesheet.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="./JS/actions.js"></script>
 </head>
 
 <body>
@@ -30,13 +31,35 @@
   </div>
   <div class="container">
     <section id="welcome">
+      <div class="slider-nextbutton"> > </div>
+      <div class="slider-prevbutton"> < </div>
       <div class="slider">
-        
+
         <div class="slider-block">
           <img src="images/black_chair.png" alt="">
           <h1>Sit <span class="green-letters">on</span> our <span class="green-letters">chair</span>
           </h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+          </p>
+          <div class="button-more">
+            Zobacz więcej
+          </div>
+        </div>
+        <div class="slider-block">
+          <img src="images/orange_chair.png" alt="">
+          <h1>Sit <span class="green-letters">on</span> our <span class="green-letters">chair</span>
+          </h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.
+          </p>
+          <div class="button-more">
+            Zobacz więcej
+          </div>
+        </div>
+        <div class="slider-block">
+          <img src="images/red_chair.png" alt="">
+          <h1>Sit <span class="green-letters">on</span> our <span class="green-letters">chair</span>
+          </h1>
+          <p>Marshmallow cake bonbon jelly beans powder cupcake cake liquorice. Bear claw tootsie roll topping powder caramels sweet cake lemon drops dragée. Sweet chupa chups pastry pie tootsie roll sesame snaps danish. Jelly tart soufflé caramels jelly beans chocolate cake pudding cheesecake.
           </p>
           <div class="button-more">
             Zobacz więcej
