--- a/index.html
+++ b/index.html
@@ -149,6 +149,83 @@
   </div>
 
   <div class="container">
+  <section class="application ">
+      <div class="main_width">
+          <section class="choice_part inline">
+              <div>
+                  <h3>SKOMPONUJ SWOJE KRZESŁO</h3>
+                  <span class="green_bell"></span>
+              </div>
+
+              <div class="form">
+                  <div class="drop_down_list">
+                      <span class="list_label">Wybierz rodzaj</span>
+                      <span class="list_arrow"></span>
+                      <ul class="list_panel">
+                          <li data-price="200">Clair</li>
+                          <li data-price="400">Margarita</li>
+                          <li data-price="600">Selena</li>
+                      </ul>
+                  </div>
+                  <div class="drop_down_list">
+                      <span class="list_label">Wybierz kolor</span>
+                      <span class="list_arrow"></span>
+                      <ul class="list_panel">
+                          <li data-price="40">Czerwony</li>
+                          <li data-price="50">Czarny</li>
+                          <li data-price="30">Pomarańczowy</li>
+                      </ul>
+                  </div>
+                  <div class="drop_down_list">
+                      <span class="list_label">Wybierz materiał</span>
+                      <span class="list_arrow"></span>
+                      <ul class="list_panel">
+                          <li data-price="150">Tkanina</li>
+                          <li data-price="300">Skóra</li>
+                      </ul>
+                  </div>
+                  <div class="checkbox check-box">
+                      <input type="checkbox" id="transport" data-price="100">
+                      <label for="transport">Transport</label>
+                  </div>
+                  <!--<div class="checkbox"></div>-->
+                  <!--<span class="list_label inline_text">Transport</span>-->
+              </div>
+          </section>
+
+          <section class="image_part inline">
+              <img src="images/red_chair.png">
+          </section>
+
+          <section class="summary_part inline">
+              <div class="align_right">
+                  <h3>PODSUMOWANIE</h3>
+                  <span class="green_bell"></span>
+              </div>
+
+              <div class="summary_panel">
+                  <div class="panel_left">
+                      <h4 class="title">Twój fotel</h4>
+                      <span class="color"></span>
+                      <span class="pattern"></span>
+                      <span class="transport"></span>
+                  </div>
+                  <div class="panel_right">
+                      <h4 class="title value"></h4>
+                      <span class="color value"></span>
+                      <span class="pattern value"></span>
+                      <span class="transport value"></span>
+                  </div>
+                  <div class="sum_label">SUMA</div>
+                  <div class="sum"><strong></strong></div>
+              </div>
+              <a href="" class="green_button">Zamawiam</a>
+          </section>
+      </div>
+  </section>
+</div>
+
+  <div class="container">
     <section id="form">
       <h2 class="price">Kontakt</h2>
       <img class="redchair" src="images/red_chair.png">
